# medical-whisper

./: .env.example  .gitignore  ARCHITECTURE.md  BACKLOG.md  DEV_LOCAL.md  DOCUMENTATION_TECHNIQUE.md  ETUDE_SPEECH_AI.md  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: config.py  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-lock.txt
backend/app/domain/: entities.py  errors.py  value_objects.py
backend/app/infrastructure/: config.py
backend/app/interface/: __init__.py  deps.py  main.py  middleware.py
backend/migrations/: env.py
backend/scripts/: hash_password.py  lock_deps.py  seed_dev.py
backend/tests/: conftest.py  fakes.py  test_admin_accounts_api.py  test_admin_api.py  test_admin_auth.py  test_admin_forms_api.py  test_api_keys.py  test_authenticate.py  test_config.py  test_dependency_rule.py  test_entities.py  test_form_discovery.py  test_form_extractor.py  test_health.py  test_integration_api.py  test_keyword_extractor.py  test_live_ws.py  test_observability.py  test_ollama_parse.py  test_ops_endpoints.py  test_orchestrator.py  test_orchestrator_latency.py  test_personaplex_client.py  test_prompt_builder.py  test_repositories.py  test_sandwich.py  test_security_middleware.py  test_segmenter.py  test_speech_events.py  test_speech_factory.py  test_speech_llm.py  test_speech_protocol.py  test_speech_stub.py  test_start_session.py  test_stt_stub.py  test_stt_whisperlive.py  test_stt_whisperlive_remote.py  test_token_service.py  test_tts_piper.py  test_tts_stub.py  (+1 more)
(+167 files in other folders)
