[project]
name = "voice-to-form-backend"
version = "2.0.0"
description = "Voice-to-Form Live — backend FastAPI (clean architecture)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "greenlet>=3.0",
    "websockets>=12.0",
    "pyjwt>=2.8",
    "ollama>=0.3",
    "httpx>=0.27",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.5",
    "black>=24.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not integration'"
markers = [
    "integration: tests nécessitant des services réels (GPU/LLM) — skippés par défaut",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.setuptools.packages.find]
include = ["app*"]
